-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: 3.2.4
-
Component/s: Internal Code
-
None
-
Fully Compatible
-
ALL
-
TIG 11 (03/11/16), TIG 12 (04/01/16)
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Currently if an index has an incorrect key count, the information is written to the top level JSON response object, but it should be written to the indexDetails JSON field similar to how a failed IndexAccessMethod->validate() failure would be reported.
Index key count failures are not reported to the indexDetails field in the response object at the moment.
- related to
-
SERVER-23183 Coverity analysis defect 98172: Logically dead code
-
- Closed
-