SERVER-22900 Adjust RocksDB to new fullValidate() API