src/rocks_index.h
@@ -57,7 +57,7 @@ namespace mongo {
                                                            bool dupsAllowed) = 0;
 
         virtual void fullValidate(OperationContext* txn, bool full, long long* numKeysOut,
-                                  BSONObjBuilder* output) const;
+                                  ValidateResults* fullResults) const;
 
         virtual bool appendCustomStats(OperationContext* txn, BSONObjBuilder* output,
                                        double scale) const {
